[DWOSS-349] Builderpattern in Swing core implemented. First Builder reworked.